--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,7 +1,7 @@
 FROM quay.io/souravkl11/rgnk-v3:latest
 
-RUN git clone https://github.com/souravkl11/raganork-md /skl/Raganork
-WORKDIR /skl/Raganork
+RUN git clone https://github.com/souravkl11/raganork-md /skl/Raga
+WORKDIR /skl/Raga
 ENV TZ=Asia/Kolkata
 RUN yarn install --network-concurrency 1
 CMD ["node", "index.js"]
