--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -2,6 +2,6 @@ FROM quay.io/souravkl11/rgnk-v3:latest
 
 RUN git clone https://github.com/souravkl11/raganork-md /skl/Raga
 WORKDIR /skl/Raga
-ENV TZ=Asia/Kolkata
+ENV TZ=Africa/Lagos 
 RUN yarn install --network-concurrency 1
 CMD ["node", "index.js"]
